--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="solve_crime">Solve</string>
     <string name="lastButton">Last Crime</string>
     <string name="firstButton">First Crime</string>
+    <string name="date_picker_title">Date of crime</string>
 
 </resources>
