--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,10 @@
     <string name="lastButton">Last Crime</string>
     <string name="firstButton">First Crime</string>
     <string name="date_picker_title">Date of crime</string>
-    <string name="time_button">Time</string>
+    <string name="new_crime">New Crime</string>
+    <string name="show_subtitle">Show subtitle</string>
+    <string name="hide_subtitle">Hide subtitle</string>
+    <string name="subtitle_format">%1$d crimes</string>
+    <string name="remove_crime">Remove crime</string>
 
 </resources>
