--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="subtitle_format">%1$d crimes</string>
     <string name="remove_crime">Remove crime</string>
     <string name="add_crime">Add new Crime</string>
+    <string name="serious_crime">Serious crime</string>
 
     <plurals name="subtitle_plural">
         <item quantity="one">%1$d crime</item>
